tests/NormalTests/paczka1/fuzzy1/30735944.err
Error in line 2: MVhNi8 A421 9,2
Error in line 6: XSAOdx66 A268 w,9
Error in line 9: XSAOdx66 A268 9,9
Error in line 11: XSAOdx66 A421 90,5
Error in line 31: gwh S108 -1,8
Error in line 32: XSAOdx66 S108 72,4
Error in line 25: qTKGtVGf A798 49,2
Error in line 36: A421 S108 8,74
